# cxx-interop-test

./: .gitignore  CMakeLists.txt  Makefile  Package.swift  README.md  build.sh  build_vendor.sh
Sources/CXX/: CXX.cpp
Sources/CXX/include/: CXX.h  module.modulemap
Sources/CXX/include/VendorHeaders/FB/: CKCoalescedSpecSupport.h  CKIndexSetDescription.h  CKWritingDirection.h
Sources/Swift/: main.swift
Sources/Swift/VendorImport/: vendor.swift
_Block_copy_IR_diff/: a.ll  b.ll
docs/: comdats.md
